apps/base/firefly-iii/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: firefly-iii
  labels:
    middle-earth-cluster.homelab/category: apps
    middle-earth-cluster.homelab/realm: finance
