apps/base/firefly-iii/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: firefly-iii
  namespace: firefly-iii
  labels:
    middle-earth-cluster.homelab/category: apps
    middle-earth-cluster.homelab/realm: network
spec:
  parentRefs:
    - name: internal-gateway
      namespace: ingress-nginx
      sectionName: https
  hostnames:
    - budget.from-gondor.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: firefly-iii
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: firefly-iii-importer
  namespace: firefly-iii
  labels:
    middle-earth-cluster.homelab/category: apps
    middle-earth-cluster.homelab/realm: network
spec:
  parentRefs:
    - name: internal-gateway
      namespace: ingress-nginx
      sectionName: https
  hostnames:
    - firefly-importer.from-gondor.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: firefly-iii-importer
          port: 80
